# benchmark-grasping

./: .gitignore  README.md  setup.py
benchmark_grasping/base/: base_grasp_planner.py  grasp.py  transformations.py
benchmark_grasping/dexnet/: dexnet_grasp_planner.py
benchmark_grasping/dexnet/cfg/: gqcnn_pj.yaml
benchmark_grasping/superquadric_based/: superquadrics_grasp_planner.py
benchmark_grasping/superquadric_based/cfg/: config_panda.yaml  config_superq_grasp_planner.py
benchmark_grasping_ros/: CMakeLists.txt  benchmark_ros_manager.py  package.xml
benchmark_grasping_ros/dexnet_ros/: CMakeLists.txt  dexnet_grasp_planner_server.py  dexnet_grasp_planner_service.py  grasp_planner_server.py
benchmark_grasping_ros/dexnet_ros/cfg/: gqcnn_pj.yaml
benchmark_grasping_ros/gpd_ros/include/gpd_ros/: gpd_grasp_planner_service.h  grasp_detection_server.h  grasp_messages.h
benchmark_grasping_ros/gpd_ros/src/gpd_ros/: gpd_grasp_planner_server.cpp  gpd_grasp_planner_service.cpp  grasp_detection_server.cpp  grasp_messages.cpp
benchmark_grasping_ros/launch/: grasp_planning_benchmark.launch
benchmark_grasping_ros/superquadric_based_ros/: superq_grasp_planner_server.py  superq_grasp_planner_service.py
benchmark_grasping_ros/superquadric_based_ros/cfg/: config_panda.yaml
benchmark_grasping_ros/superquadrics_based_ros/: superq_grasp_planner_service.py
docker/: Makefile  docker-compose.yml
docker/dexnet/: Dockerfile
docker/gpd/: Dockerfile
docker/superquadric_based/: Dockerfile
docker/superquadrics_based/: Dockerfile
robot_grasp_srv/: CMakeLists.txt  package.xml
